<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IsetActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="180dp"
                android:layout_height="178dp"
                android:src="@drawable/isetlogo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="334dp"
                android:layout_height="31dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="20dp"

                android:text="@string/component_title"
                android:textColor="#303F9F"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="328dp"
                android:layout_height="41dp"
                android:layout_marginStart="36dp"
                android:text="@string/bloc3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="328dp"
                android:layout_height="41dp"
                android:layout_marginStart="36dp"
                android:text="@string/bloc2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="209dp"
                android:layout_height="57dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"

                android:text="@string/name_iset_ar"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#14B68E"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="328dp"
                android:layout_height="41dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="16dp"
                android:text="@string/bloc1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="328dp"
                android:layout_height="41dp"
                android:layout_marginStart="36dp"
                android:text="@string/bloc4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="388dp"
                android:layout_height="104dp"
                android:layout_marginStart="12dp"

                android:layout_marginTop="26dp"
                android:text="@string/description_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="384dp"
                android:layout_height="38dp"
                android:layout_marginStart="8dp"

                android:layout_marginTop="21dp"
                android:text="@string/component"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="217dp"
                android:layout_height="108dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"

                android:shadowColor="#00E5FF"
                android:text="@string/name_iset_fr"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#14B68E"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="330dp"
                android:layout_height="26dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="38dp"

                android:text="@string/description_title"
                android:textColor="#303F9F"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>